Minor change to fix accidental margin collapsing

--- a/src/components/Level/Level.module.css
+++ b/src/components/Level/Level.module.css
@@ -2,7 +2,9 @@
   width: 100vw;
   height: 100vh;
   background-color: white;
-  position: relative;
+  position: absolute;
+  top: 0;
+  margin: 0;
 }
 
 .devWinCondition {
